# case-study-subway-accessibility

./: .gitattributes  .gitignore  CLAUDE.md  README.md  jellycell.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: case-study-reviewer.md
.claude/skills/: committed-tearsheets.md  data-provenance.md  jellycell-gotchas.md  paper-cadence.md  release-bump.md
LEGACY/: jellycell.toml
LEGACY/artifacts/: borough_comparison.parquet  most_fragile_stations.parquet  ols_gap_on_demographics.parquet  ols_summary.json  panel_summary.json  system_snapshot.json
LEGACY/manuscripts/tearsheets/: 01_context_and_coverage.md  02_reliability_and_gap_scores.md  05_discussion_and_forward.md
LEGACY/notebooks/: 03_temporal_and_equity.py  05_discussion_and_forward.py
artifacts/: cross_walk.json  cross_walk_table.parquet  global_morans_i.parquet  headline_numbers.json  reliability_summary.json  spatial_summary.json  summary_findings.json  treatment_control_balance.parquet
manuscripts/: AUDIT.md  MANUSCRIPT.md  UPSTREAM_REFERENCE.md  journal.md
manuscripts/tearsheets/: 01_context_and_pointer.md  02_figures_gallery.md  03_cross_walk.md  03_temporal_and_equity.md  04_spatial_clustering.md
notebooks/: 01_context_and_coverage.py  01_context_and_pointer.py  02_figures_gallery.py  02_reliability_and_gap_scores.py  03_cross_walk.py  04_spatial_clustering.py
